--- a/index.html
+++ b/index.html
@@ -13,42 +13,38 @@
     </header>
 
     <main>
-        <p>Turn</p>
+        <p class="turn-indicator">Turn</p>
         <div class="gameboard">
-            <div class="gamecell" data-position="0"></div>
-            <div class="gamecell" data-position="1"></div>
-            <div class="gamecell" data-position="2"></div>
-            <div class="gamecell" data-position="3"></div>
-            <div class="gamecell" data-position="4"></div>
-            <div class="gamecell" data-position="5"></div>
-            <div class="gamecell" data-position="6"></div>
-            <div class="gamecell" data-position="7"></div>
-            <div class="gamecell" data-position="8"></div>
+            <div class="tile" data-index="0"></div>
+            <div class="tile" data-index="1"></div>
+            <div class="tile" data-index="2"></div>
+            <div class="tile" data-index="3"></div>
+            <div class="tile" data-index="4"></div>
+            <div class="tile" data-index="5"></div>
+            <div class="tile" data-index="6"></div>
+            <div class="tile" data-index="7"></div>
+            <div class="tile" data-index="8"></div>
         </div>
-        <button type="button">Reset</button>
+        <button type="button" class="reset-btn">Restart Game</button>
     </main>
 
-    <dialog class="names-dialog">
+    <dialog class="name-entry-dialog">
         <form>
-            <p class="title">Let's start the game!</p>
-            <p  class="player-name">
-                <label for="name1">Player 1's Name:</label>
-                <input type="text" name="name1" id="name1" maxlength="15" required>
+            <p class="dialog-title">Let's start the game!</p>
+            <p class="player-input">
+                <label for="player1">Player 1's Name:</label>
+                <input type="text" name="player1" id="player1" maxlength="15" required>
             </p>
-            <p  class="player-name">
-                <label for="name2">Player 2's Name:</label>
-                <input type="text" name="name2" id="name2" maxlength="15" required>
+            <p class="player-input">
+                <label for="player2">Player 2's Name:</label>
+                <input type="text" name="player2" id="player2" maxlength="15" required>
             </p>
-            <button>Confirm</button>
+            <button type="button" class="submit-names-btn">Confirm</button>
         </form>
     </dialog>
 
-    <dialog class="result-dialog">
+    <dialog class="game-result-dialog">
         <h1>Player X Wins!</h1>
     </dialog>
-
-    <footer>
-        <p>Made by Hawra Husain</p>
-    </footer>
 </body>
 </html>
